opam-version: "2.0"
name: "ocamldot"
version: "1.2"
maintainer: "Zoggy <zoggy@bat8.org>"
authors: ["Zoggy <zoggy@bat8.org>"]
homepage: ["https://zoggy.frama.io/ocamldot/"]
license: "LGPL-3.0-only"
synopsis: "Parsing and printing graphviz files in OCaml"
doc: ["https://zoggy.frama.io/ocamldot/refdoc/"]
bug-reports: "https://framagit.org/zoggy/ocamldot/-/issues"
dev-repo: "git+https://framagit.org/zoggy/ocamldot.git"
build: [
  ["dune" "subst"] { dev }
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "ocaml" {>= "4.12.0" }
  "ocamlfind" {build}
  "dune"  { >= "2.2" }
  "dot"
]
